[tool.poetry]
name = "archive-ai"
version = "0.1.0"
description = ""
authors = ["Josowsky <bartosz@jozwowiak.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytesseract = "^0.3.13"
pillow = "^11.0.0"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
